--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5404,6 +5404,10 @@ header .header-style-four .nav-right .nav-right-hotline .hotline-info h6 a {
   padding-top: 5px;
 }
 
+.guide-card-alpha-hidden {
+    opacity: 0;
+}
+
 .guide-card-beta {
   background: #ffffff;
   box-shadow: 3px 5px 35px rgba(86, 68, 169, 0.1);
